<?xml version="1.0"?>
<package format="2">
  <name>minimum_distance</name>
  <version>0.0.0</version>
  <description>The  package</description>
  <maintainer email="v4hn@todo.todo">v4hn</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>roscpp</depend>
</package>
